--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,20 +14,18 @@ codegen-units = 1
 crate-type = ["cdylib"]
 
 [dependencies]
-worker = { version="0.5.0", features=['http', 'axum', 'd1'], optional = true }
+worker = { version = "0.5", features = ['http', 'axum', 'd1'], optional = true }
 axum  = { version = "0.7", default-features = false, optional = true }
 tower-service = "0.3"
 console_error_panic_hook = { version = "0.1" }
 console_log = { version = "1.0", optional = true }
+getrandom = { version = "0.2.15", features = ["js"]}
 gloo-net = { version = "0.6", features = ["http"] }
 gloo-timers = { version = "0.3", features = ["futures"] }
-leptos = "0.6"
-leptos_axum = { version = "0.6", default-features = false, features = [
-  "wasm",
-], optional = true }
-leptos_meta = "0.6"
-leptos_router = "0.6"
-leptos_dom = "0.6"
+leptos = "0.7"
+leptos_axum = { version = "0.7", default-features = false, features = ["wasm"], optional = true }
+leptos_meta = "0.7"
+leptos_router = "0.7"
 log = "0.4"
 once_cell = "1.19"
 serde = { version = "1.0", features = ["derive"] }
@@ -40,9 +38,6 @@ wasm-bindgen-futures = "0.4"
 hydrate = [
   "dep:console_log",
   "leptos/hydrate",
-  "leptos_meta/hydrate",
-  "leptos_router/hydrate",
-  "leptos_dom/hydrate",
   "dep:wasm-bindgen",
 ]
 ssr = [
@@ -50,7 +45,6 @@ ssr = [
   "leptos/ssr",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "leptos_dom/ssr",
   "dep:leptos_axum",
   "dep:worker",
 ]
